--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-# emily
+<!doctype html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <title>React App</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta property="og:title" content="Emily's Berry First Birthday" />
+    <meta property="og:image" content="images/invitation.jpg" />
+</head>
+<body>
+<script>
+    window.location.href = "https://www.amazon.com/hz/wishlist/ls/GN9PRP12V8GX?ref_=wl_share";
+
+</script>
+</body>
+</html>
