--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 <script>
     window.location.href = "https://www.amazon.com/hz/wishlist/ls/GN9PRP12V8GX?ref_=wl_share";
-
 </script>
+<img src="images/invitation.jpg" />
 </body>
 </html>
