--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta property="og:title" content="Emily's Berry First Birthday" />
     <meta property="og:image" content="images/invitation.jpg" />
+    <meta property="og:site_name" content="Montoya" />
 </head>
 <body>
 <script>
